--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
     "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
+        {
+            "source": "/api/(.*)",
+            "destination": "https://your-api.domain/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
     ]
-  }
+}
