--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "https://your-api.domain/$1"
+            "destination": "https://js-backend-api.onrender.com"
         },
         {
             "source": "/(.*)",
