--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
     "rewrites": [
+        { 
+            "source": "/api/:path*", 
+            "destination": "https://js-backend-api.onrender.com/api/:path*" 
+        },
         {
             "source": "/(.*)",
-            "destination": "/"
+            "destination": "/index.html"
         }
     ]
 }
