--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "rewrites": [
-        { 
-            "source": "/api/:path*", 
-            "destination": "https://js-backend-api.onrender.com/api/:path*"
-        },
+        //{ 
+        //    "source": "/api/:path*", 
+        //    "destination": "https://js-backend-api.onrender.com/api/:path*"
+       // },
         {
             "source": "/(.*)",
             "destination": "/index.html"
